...
    return LayoutBuilder(
      builder: (context, constraints) {
        final isWideScreen =
            constraints.maxWidth >= AppConstants.tabletBreakpoint;

        final groupsButton = TextButton.icon(
          key: const Key('grid-groups-button'),
          icon: const Icon(Icons.group),
          label: const Text('Groups'),
          onPressed: () => Navigator.of(
            context,
          ).pushReplacementNamed(AppRoutesEnum.groupGrid.name),
        );
...
